# cloudformation_dataclasses

./: .gitattributes  .gitignore  CHANGELOG.md  CHECKLIST.md  CLAUDE.md  DEVELOPERS.md  IMPORTER.md  MANIFEST.in  README.md  conftest.py  planning.md  pyproject.toml
examples/aws-cloudformation-templates/adconnector_cfn/: CLAUDE.md  README.md  pyproject.toml
examples/aws-cloudformation-templates/adconnector_cfn/adconnector_cfn/: __init__.py  __init__.pyi  __main__.py  main.py  monitoring.py  network.py  params.py
examples/aws-cloudformation-templates/adconnector_cfn/tests/: test_adconnector_cfn.py
examples/aws-cloudformation-templates/amazon_linux/: CLAUDE.md  README.md  pyproject.toml
examples/aws-cloudformation-templates/amazon_linux/amazon_linux/: __init__.py  __init__.pyi  __main__.py  main.py  params.py
examples/aws-cloudformation-templates/amazon_linux/tests/: __init__.py
examples/aws-cloudformation-templates/amazon_linux_1/: CLAUDE.md  README.md  pyproject.toml
examples/aws-cloudformation-templates/amazon_linux_1/amazon_linux_1/: __init__.py  __init__.pyi  __main__.py  compute.py  main.py  params.py  stack_config.py
examples/aws-cloudformation-templates/amazon_linux_1/tests/: __init__.py  test_amazon_linux_1.py
examples/aws-cloudformation-templates/amazon_linux_2/: CLAUDE.md  README.md  pyproject.toml
examples/aws-cloudformation-templates/amazon_linux_2/amazon_linux_2/: __init__.py  __main__.py  compute.py  main.py
examples/aws-cloudformation-templates/amazon_linux_2/tests/: __init__.py  test_amazon_linux_2.py
examples/aws-cloudformation-templates/amzn2_greengrass_cfn/: CLAUDE.md  README.md  pyproject.toml
examples/aws-cloudformation-templates/amzn2_greengrass_cfn/amzn2_greengrass_cfn/: __init__.py  __init__.pyi  __main__.py  main.py  params.py  security.py
examples/aws-cloudformation-templates/amzn2_greengrass_cfn/tests/: __init__.py  test_amzn2_greengrass_cfn.py
examples/aws-cloudformation-templates/amzn2_greengrass_cfn_pkg/: CLAUDE.md  README.md  pyproject.toml
examples/aws-cloudformation-templates/amzn2_greengrass_cfn_pkg/amzn2_greengrass_cfn_pkg/: __init__.py  __init__.pyi  __main__.py  database.py  main.py  outputs.py  params.py  security.py  stack_config.py
examples/aws-cloudformation-templates/amzn2_greengrass_cfn_pkg/tests/: __init__.py  test_amzn2_greengrass_cfn_pkg.py
examples/aws-cloudformation-templates/apigateway_lambda_integration/: CLAUDE.md  README.md  pyproject.toml
examples/aws-cloudformation-templates/apigateway_lambda_integration/apigateway_lambda_integration/: __init__.py  __init__.pyi  __main__.py  main.py  params.py  security.py
examples/aws-cloudformation-templates/apigateway_lambda_integration/tests/: __init__.py  test_apigateway_lambda_integration.py
examples/aws-cloudformation-templates/apprunnerservicefromecr/: CLAUDE.md  README.md  pyproject.toml
examples/aws-cloudformation-templates/apprunnerservicefromecr/apprunnerservicefromecr/: __init__.py  __init__.pyi  __main__.py  main.py  params.py  security.py  stack_config.py
examples/aws-cloudformation-templates/apprunnerservicefromecr/tests/: test_apprunnerservicefromecr.py
examples/aws-cloudformation-templates/autoscalingmultiazwithnotifications/: CLAUDE.md  README.md  pyproject.toml
examples/aws-cloudformation-templates/autoscalingmultiazwithnotifications/autoscalingmultiazwithnotifications/: __init__.py  __init__.pyi  __main__.py  compute.py  main.py  messaging.py  monitoring.py  network.py  outputs.py  params.py  stack_config.py
examples/aws-cloudformation-templates/autoscalingmultiazwithnotifications/tests/: __init__.py  test_autoscalingmultiazwithnotifications.py
examples/aws-cloudformation-templates/autoscalingrollingupdates/: CLAUDE.md  README.md  pyproject.toml
examples/aws-cloudformation-templates/autoscalingrollingupdates/autoscalingrollingupdates/: __init__.py  __init__.pyi  __main__.py  compute.py  main.py  params.py
examples/aws-cloudformation-templates/autoscalingrollingupdates/tests/: __init__.py  test_autoscalingrollingupdates.py
examples/aws-cloudformation-templates/bandit/: CLAUDE.md  README.md  pyproject.toml
examples/aws-cloudformation-templates/bandit/bandit/: __init__.py  __init__.pyi  __main__.py  compute.py  params.py
examples/aws-cloudformation-templates/cdk/: CLAUDE.md  README.md  pyproject.toml
examples/aws-cloudformation-templates/centos/: CLAUDE.md  README.md  pyproject.toml
examples/aws-cloudformation-templates/centos_1/: CLAUDE.md  README.md  pyproject.toml
examples/aws-cloudformation-templates/centos_2/: CLAUDE.md  README.md  pyproject.toml
examples/aws-cloudformation-templates/cfn_endpoint_creationpolicy/: CLAUDE.md  README.md  pyproject.toml
examples/aws-cloudformation-templates/cfn_endpoint_creationpolicy_no_igw/: CLAUDE.md  README.md  pyproject.toml
examples/aws-cloudformation-templates/cloudformation_codebuild_template/: CLAUDE.md  README.md  pyproject.toml
examples/aws-cloudformation-templates/cloudformation_codepipeline_template/: CLAUDE.md  README.md  pyproject.toml
examples/aws-cloudformation-templates/cloudfront_cfn/: CLAUDE.md  README.md  pyproject.toml
examples/aws-cloudformation-templates/cloudfront_nocache/: CLAUDE.md  README.md  pyproject.toml
examples/aws-cloudformation-templates/cloudwatch_dashboard_clientvpn/: CLAUDE.md  README.md  pyproject.toml
examples/aws-cloudformation-templates/cloudwatch_dashboard_nat_flowlogs/: CLAUDE.md  README.md  pyproject.toml
examples/aws-cloudformation-templates/codebuild_app_build/: README.md  pyproject.toml
examples/aws-cloudformation-templates/cognito_cfn/: CLAUDE.md  README.md  pyproject.toml
examples/aws-cloudformation-templates/common_resources_stackset/: CLAUDE.md  README.md  pyproject.toml
examples/aws-cloudformation-templates/common_resources_stackset_2/: CLAUDE.md  README.md  pyproject.toml
examples/aws-cloudformation-templates/common_resources_stackset_pkg/: CLAUDE.md  README.md  pyproject.toml
examples/aws-cloudformation-templates/compliant_bucket/: CLAUDE.md  README.md  pyproject.toml
(+4709 files in other folders)
