[project]
name = "adconnector_cfn"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "cloudformation_dataclasses",
]

[project.scripts]
adconnector_cfn = "adconnector_cfn.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["adconnector_cfn"]

[tool.hatch.build.targets.sdist]
include = ["adconnector_cfn/**/*.py"]

[dependency-groups]
dev = [
    "mypy>=1.0",
]
