[project]
name = "amazon_linux"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "cloudformation_dataclasses",
]

[project.scripts]
amazon_linux = "amazon_linux.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amazon_linux"]

[tool.hatch.build.targets.sdist]
include = ["amazon_linux/**/*.py"]

[dependency-groups]
dev = [
    "mypy>=1.0",
]
