[project]
name = "amazon_linux_2"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "cloudformation_dataclasses",
]

[project.scripts]
amazon_linux_2 = "amazon_linux_2.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amazon_linux_2"]

[tool.hatch.build.targets.sdist]
include = ["amazon_linux_2/**/*.py", "amazon_linux_2/resources/"]

[dependency-groups]
dev = [
    "mypy>=1.0",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
