[project]
name = "amazon_linux_2"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "cloudformation_dataclasses",
]

[project.scripts]
amazon_linux_2 = "amazon_linux_2.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amazon_linux_2"]

[tool.hatch.build.targets.sdist]
include = ["amazon_linux_2/**/*.py"]

[dependency-groups]
dev = [
    "mypy>=1.0",
]
