[project]
name = "amzn2_greengrass_cfn"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "cloudformation_dataclasses",
]

[project.scripts]
amzn2_greengrass_cfn = "amzn2_greengrass_cfn.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amzn2_greengrass_cfn"]

[tool.hatch.build.targets.sdist]
include = ["amzn2_greengrass_cfn/**/*.py"]

[dependency-groups]
dev = [
    "mypy>=1.0",
]
