[project]
name = "amzn2_greengrass_cfn_pkg"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "cloudformation_dataclasses",
]

[project.scripts]
amzn2_greengrass_cfn_pkg = "amzn2_greengrass_cfn_pkg.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amzn2_greengrass_cfn_pkg"]

[tool.hatch.build.targets.sdist]
include = ["amzn2_greengrass_cfn_pkg/**/*.py"]

[dependency-groups]
dev = [
    "mypy>=1.0",
]
