[project]
name = "apigateway_lambda_integration"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "cloudformation_dataclasses",
]

[project.scripts]
apigateway_lambda_integration = "apigateway_lambda_integration.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apigateway_lambda_integration"]

[tool.hatch.build.targets.sdist]
include = ["apigateway_lambda_integration/**/*.py"]

[dependency-groups]
dev = [
    "mypy>=1.0",
]
