[project]
name = "apprunnerservicefromecr"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "cloudformation_dataclasses",
]

[project.scripts]
apprunnerservicefromecr = "apprunnerservicefromecr.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apprunnerservicefromecr"]

[tool.hatch.build.targets.sdist]
include = ["apprunnerservicefromecr/**/*.py"]

[dependency-groups]
dev = [
    "mypy>=1.0",
]
