[project]
name = "autoscalingmultiazwithnotifications"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "cloudformation_dataclasses",
]

[project.scripts]
autoscalingmultiazwithnotifications = "autoscalingmultiazwithnotifications.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["autoscalingmultiazwithnotifications"]

[tool.hatch.build.targets.sdist]
include = ["autoscalingmultiazwithnotifications/**/*.py"]

[dependency-groups]
dev = [
    "mypy>=1.0",
]
