[project]
name = "autoscalingrollingupdates"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "cloudformation_dataclasses",
]

[project.scripts]
autoscalingrollingupdates = "autoscalingrollingupdates.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["autoscalingrollingupdates"]

[tool.hatch.build.targets.sdist]
include = ["autoscalingrollingupdates/**/*.py"]

[dependency-groups]
dev = [
    "mypy>=1.0",
]
