[project]
name = "bandit"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "cloudformation_dataclasses",
]

[project.scripts]
bandit = "bandit.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bandit"]

[tool.hatch.build.targets.sdist]
include = ["bandit/**/*.py"]

[dependency-groups]
dev = [
    "mypy>=1.0",
]
