[project]
name = "cdk"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "cloudformation_dataclasses",
]

[project.scripts]
cdk = "cdk.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cdk"]

[tool.hatch.build.targets.sdist]
include = ["cdk/**/*.py"]

[dependency-groups]
dev = [
    "mypy>=1.0",
]
