[project]
name = "centos"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "cloudformation_dataclasses",
]

[project.scripts]
centos = "centos.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["centos"]

[tool.hatch.build.targets.sdist]
include = ["centos/**/*.py", "centos/resources/"]

[dependency-groups]
dev = [
    "mypy>=1.0",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
