[project]
name = "centos"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "cloudformation_dataclasses",
]

[project.scripts]
centos = "centos.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["centos"]

[tool.hatch.build.targets.sdist]
include = ["centos/**/*.py"]

[dependency-groups]
dev = [
    "mypy>=1.0",
]
