[project]
name = "centos_1"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "cloudformation_dataclasses",
]

[project.scripts]
centos_1 = "centos_1.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["centos_1"]

[tool.hatch.build.targets.sdist]
include = ["centos_1/**/*.py"]

[dependency-groups]
dev = [
    "mypy>=1.0",
]
