[project]
name = "cfn_endpoint_creationpolicy"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "cloudformation_dataclasses",
]

[project.scripts]
cfn_endpoint_creationpolicy = "cfn_endpoint_creationpolicy.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cfn_endpoint_creationpolicy"]

[tool.hatch.build.targets.sdist]
include = ["cfn_endpoint_creationpolicy/**/*.py", "cfn_endpoint_creationpolicy/resources/"]

[dependency-groups]
dev = [
    "mypy>=1.0",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
