[project]
name = "cfn_endpoint_creationpolicy"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "cloudformation_dataclasses",
]

[project.scripts]
cfn_endpoint_creationpolicy = "cfn_endpoint_creationpolicy.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cfn_endpoint_creationpolicy"]

[tool.hatch.build.targets.sdist]
include = ["cfn_endpoint_creationpolicy/**/*.py"]

[dependency-groups]
dev = [
    "mypy>=1.0",
]
