[project]
name = "cfn_endpoint_creationpolicy_no_igw"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "cloudformation_dataclasses",
]

[project.scripts]
cfn_endpoint_creationpolicy_no_igw = "cfn_endpoint_creationpolicy_no_igw.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cfn_endpoint_creationpolicy_no_igw"]

[tool.hatch.build.targets.sdist]
include = ["cfn_endpoint_creationpolicy_no_igw/**/*.py"]

[dependency-groups]
dev = [
    "mypy>=1.0",
]
