[project]
name = "cloudformation_codepipeline_template"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "cloudformation_dataclasses",
]

[project.scripts]
cloudformation_codepipeline_template = "cloudformation_codepipeline_template.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cloudformation_codepipeline_template"]

[tool.hatch.build.targets.sdist]
include = ["cloudformation_codepipeline_template/**/*.py", "cloudformation_codepipeline_template/resources/"]

[dependency-groups]
dev = [
    "mypy>=1.0",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
