[project]
name = "cloudfront_cfn"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "cloudformation_dataclasses",
]

[project.scripts]
cloudfront_cfn = "cloudfront_cfn.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cloudfront_cfn"]

[tool.hatch.build.targets.sdist]
include = ["cloudfront_cfn/**/*.py", "cloudfront_cfn/resources/"]

[dependency-groups]
dev = [
    "mypy>=1.0",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
