[project]
name = "cloudfront_nocache"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "cloudformation_dataclasses",
]

[project.scripts]
cloudfront_nocache = "cloudfront_nocache.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cloudfront_nocache"]

[tool.hatch.build.targets.sdist]
include = ["cloudfront_nocache/**/*.py"]

[dependency-groups]
dev = [
    "mypy>=1.0",
]
