[project]
name = "cloudwatch_dashboard_clientvpn"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "cloudformation_dataclasses",
]

[project.scripts]
cloudwatch_dashboard_clientvpn = "cloudwatch_dashboard_clientvpn.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cloudwatch_dashboard_clientvpn"]

[tool.hatch.build.targets.sdist]
include = ["cloudwatch_dashboard_clientvpn/**/*.py"]

[dependency-groups]
dev = [
    "mypy>=1.0",
]
