[project]
name = "cloudwatch_dashboard_nat_flowlogs"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "cloudformation_dataclasses",
]

[project.scripts]
cloudwatch_dashboard_nat_flowlogs = "cloudwatch_dashboard_nat_flowlogs.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cloudwatch_dashboard_nat_flowlogs"]

[tool.hatch.build.targets.sdist]
include = ["cloudwatch_dashboard_nat_flowlogs/**/*.py", "cloudwatch_dashboard_nat_flowlogs/resources/"]

[dependency-groups]
dev = [
    "mypy>=1.0",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
