[project]
name = "codebuild_app_build"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "cloudformation_dataclasses",
]

[project.scripts]
codebuild_app_build = "codebuild_app_build.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["codebuild_app_build"]

[tool.hatch.build.targets.sdist]
include = ["codebuild_app_build/**/*.py", "codebuild_app_build/resources/"]

[dependency-groups]
dev = [
    "mypy>=1.0",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
