[project]
name = "cognito_cfn"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "cloudformation_dataclasses",
]

[project.scripts]
cognito_cfn = "cognito_cfn.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cognito_cfn"]

[tool.hatch.build.targets.sdist]
include = ["cognito_cfn/**/*.py"]

[dependency-groups]
dev = [
    "mypy>=1.0",
]
