[project]
name = "common_resources_stackset"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "cloudformation_dataclasses",
]

[project.scripts]
common_resources_stackset = "common_resources_stackset.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["common_resources_stackset"]

[tool.hatch.build.targets.sdist]
include = ["common_resources_stackset/**/*.py", "common_resources_stackset/resources/"]

[dependency-groups]
dev = [
    "mypy>=1.0",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
