[project]
name = "common_resources_stackset"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "cloudformation_dataclasses",
]

[project.scripts]
common_resources_stackset = "common_resources_stackset.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["common_resources_stackset"]

[tool.hatch.build.targets.sdist]
include = ["common_resources_stackset/**/*.py"]

[dependency-groups]
dev = [
    "mypy>=1.0",
]
