[project]
name = "common_resources_stackset_2"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "cloudformation_dataclasses",
]

[project.scripts]
common_resources_stackset_2 = "common_resources_stackset_2.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["common_resources_stackset_2"]

[tool.hatch.build.targets.sdist]
include = ["common_resources_stackset_2/**/*.py", "common_resources_stackset_2/resources/"]

[dependency-groups]
dev = [
    "mypy>=1.0",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
