[project]
name = "compliant_bucket"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "cloudformation_dataclasses",
]

[project.scripts]
compliant_bucket = "compliant_bucket.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["compliant_bucket"]

[tool.hatch.build.targets.sdist]
include = ["compliant_bucket/**/*.py"]

[dependency-groups]
dev = [
    "mypy>=1.0",
]
